# dash-app

./: .pre-commit-config.yaml  Dockerfile  README.md  deploy-env.txt  dev-env.yaml  environment.yaml  pyproject.toml  setup.cfg
app/: app.py  dashboard.py  prepare_results.py  tsne_projection_results.pkl  umap_projection_results.pkl
app/assets/: custom.css
