[tool.poetry]
name = "env"
version = "v0.0.1"
description = "A Dash App"
authors = ["Essi Alizadeh <hello@ealizadeh.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/e-alizadeh/dash-app"
repository = "https://github.com/e-alizadeh/dash-app"


[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = true

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pandas = "^1.3.2"
umap-learn = "*"
dataclasses-json = "^0.5.4"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.0"
scikit-learn = "^1.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"