[tool.poetry]
name = "env"
version = "v0.0.1"
description = "A Dash App"
authors = ["Essi Alizadeh <hello@ealizadeh.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/e-alizadeh/dash-app"
repository = "https://github.com/e-alizadeh/dash-app"


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
umap-learn = "*"
dataclasses-json = "^0.5.4"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.0"
scikit-learn = "^1.0.1"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"